# serverless-python

./: .editorconfig  .gitignore  CHANGELOG.md  Makefile  Pipfile  README.rst  makenew.sh  package-lock.json  package.json  pylintrc  pyproject.toml  serverless.yml  setup.cfg  setup.py
.circleci/: config.yml  envvars.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/actions/setup/: action.yml
.github/actions/setup-serverless/: action.yml
.github/workflows/: format.yml  main.yml  promote.yml  publish.yml  release.yml  version.yml
handlers/: todo.py
makenew_serverless_python/: __init__.py  todo.py  todo_test.py
