[tool.poetry]
name = "makenew-serverless-python"
version = "5.0.0"
description = "Package skeleton for a Python Serverless project on AWS Lambda."
authors = ["Evan Sosenko <razorx@evansosenko.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/makenew/serverless-python"
repository = "https://github.com/makenew/serverless-python"
include = ['poetry.lock']

[tool.poetry.dependencies]
python = "^3.9.10"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
bump2version = "^1.0.0"
pylint = "^2.4.0"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytest-runner = "^6.0.0"
pytest-watch = "^4.2.0"
twine = "^4.0.0"
wheel = "^0.34.0"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
norecursedirs = [
    "node_modules"
]
