[tool.poetry]
name = "makenew-serverless-python"
version = "6.5.0"
description = "Package skeleton for a Python Serverless project on AWS Lambda."
authors = ["Evan Sosenko <razorx@evansosenko.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/makenew/serverless-python"
repository = "https://github.com/makenew/serverless-python"

[tool.poetry.dependencies]
python = "^3.9.14"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.4.0"
pytest = "^7.1.1"
pytest-cov = "^4.0.0"
pytest-runner = "^6.0.0"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
norecursedirs = [
    "node_modules"
]
